--- a/xmlproj/templates/contact_form.html
+++ b/xmlproj/templates/contact_form.html
@@ -10,6 +10,7 @@
             <div class="col-md-6 offset-md-3">
                 <h1 class="mb-4">Добавить контакт</h1>
                 
+                <!-- Здесь присылаем необходимые сообщения -->
                 {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }}">{{ message }}</div>
