--- a/xmlproj/templates/xml_files_list.html
+++ b/xmlproj/templates/xml_files_list.html
@@ -14,6 +14,7 @@
             <a href="{% url 'contact_list' %}" class="btn btn-secondary">Список контактов</a>
         </div>
         
+        <!-- Здесь присылаем необходимые сообщения -->
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }} alert-dismissible fade show">
