--- a/xmlproj/templates/contact_form.html
+++ b/xmlproj/templates/contact_form.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Добавить контакт</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container mt-5">
@@ -35,7 +37,7 @@
                     {% endfor %}
                     
                     <button type="submit" class="btn btn-primary">Сохранить</button>
-                    <a href="{% url 'contact_list' %}" class="btn btn-secondary">Список контактов</a>
+                    <a href="{% url 'contact_list' %}" class="btn btn-warning">Список контактов</a>
                     <a href="{% url 'upload_xml' %}" class="btn btn-info">Загрузить XML</a>
                     <a href="{% url 'xml_files_list' %}" class="btn btn-warning">Все XML файлы</a>
                 </form>
