--- a/xmlproj/templates/xml_file_detail.html
+++ b/xmlproj/templates/xml_file_detail.html
@@ -1,15 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>{{ filename }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Файл: {{ filename }}</h1>
         
         <div class="mb-3">
-            <a href="{% url 'xml_files_list' %}" class="btn btn-secondary">← Назад к списку файлов</a>
+            <a href="{% url 'xml_files_list' %}" class="btn btn-warning">← Назад к списку файлов</a>
         </div>
         
         {% if has_contacts %}
