--- a/xmlproj/templates/xml_files_list.html
+++ b/xmlproj/templates/xml_files_list.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>XML файлы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container mt-5">
@@ -11,7 +13,7 @@
         <div class="mb-3">
             <a href="{% url 'contact_form' %}" class="btn btn-primary">Добавить контакт</a>
             <a href="{% url 'upload_xml' %}" class="btn btn-info">Загрузить XML</a>
-            <a href="{% url 'contact_list' %}" class="btn btn-secondary">Список контактов</a>
+            <a href="{% url 'contact_list' %}" class="btn btn-warning">Список контактов</a>
         </div>
         
         <!-- Здесь присылаем необходимые сообщения -->
