--- a/xmlproj/templates/xml_file_detail.html
+++ b/xmlproj/templates/xml_file_detail.html
@@ -11,7 +11,7 @@
         <h1 class="mb-4">Файл: {{ filename }}</h1>
         
         <div class="mb-3">
-            <a href="{% url 'xml_files_list' %}" class="btn btn-warning">← Назад к списку файлов</a>
+            <a href="{% url 'xml_files_list' %}" class="btn btn-warning">Назад к списку файлов</a>
         </div>
         
         {% if has_contacts %}
@@ -44,4 +44,5 @@
         {% endif %}
     </div>
 </body>
+
 </html>
